# cubix_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  complete_wide_sales_parquet.ipynb  pyproject.toml
.github/workflows/: deploy.yaml
cubix_capstone/etl/bronze/: extract_and_load_file.py
cubix_capstone/etl/gold/: daily_product_category_metrics.py  daily_sales_metrics.py  wide_sales.py
cubix_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py  scd.py
cubix_capstone/utils/: authentication.py  config.py  datalake.py
final result/: part-00000-tid-8811565766762923780-acd25758-f19b-43a1-bd88-4b7de807fcb9-402-1-c000.snappy.parquet  part-00001-tid-8811565766762923780-acd25758-f19b-43a1-bd88-4b7de807fcb9-403-1-c000.snappy.parquet  part-00002-tid-8811565766762923780-acd25758-f19b-43a1-bd88-4b7de807fcb9-404-1-c000.snappy.parquet  wide_sales_complete.parquet
src/: test.py
tests/: conftest.py
tests/etl/gold/: test_daily_product_category_metrics.py  test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
