[project]
name = "cubix-capstone"
version = "0.1.0"
description = ""
authors = [
    {name = "phrubos",email = "peter.hrubos.szte@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "numpy (>=1,<2)"
]

[tool.poetry]
packages = [{include = "cubix_capstone"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyarrow = "^19.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
